# lutInterp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lutinterp/: __init__.py  interpolater.py
tests/: test_interpolater.py
