[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project]
name = "lutinterp"
version = "0.1.1"
description = "Generate C lookup-table interpolation code from Python callables"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Lothar Eichelberger", email = "jeanjacques.eichelberger@gmail.com" }
]
keywords = ["embedded", "interpolation", "lookup-table", "C code generation", "integer arithmetic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyright>=1.1",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/leatnova/lutInterp"

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]

